--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "cara",
-  "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
+  "name": "jasonbuffin.dev",
+  "description": "Personal developer website for Jason Buffin",
   "version": "0.2.15",
   "author": "LekoArts",
   "license": "0BSD",
@@ -27,6 +27,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ajv": "^8.17.1",
     "cross-env": "^7.0.3",
     "typescript": "^5.5.3"
   }
